fix spacing

--- a/style.scss
+++ b/style.scss
@@ -75,12 +75,11 @@ body {
     height: 250px;
     position: relative;
     top: 0;
-    margin-bottom: 1rem;
     border-radius: 5px;
     box-shadow: 0px 0px 10px grey;
 }
 .countries {
-    height: 100%;
+    height: auto;
 }
 .country {
     padding: .5rem .75rem;
